infra/k8s/base/webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: azuredocs-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  namespace: azuredocs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
        azure.workload.identity/use: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      priorityClassName: webui-high-priority
      serviceAccountName: azuredocs-app-sa
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: webui
      containers:
        - name: webui
          image: seanmckdemo.azurecr.io/webui
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
          volumeMounts:
          - name: secrets-store
            mountPath: "/mnt/secrets-store"
            readOnly: true
      nodeSelector:
        karpenter.sh/capacity-type: on-demand
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azuredocs-secrets"
